
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ u_char ;


 scalar_t__ DEL ;
 char* END ;
 int memcmp (scalar_t__*,char*,int) ;
 int memcpy (scalar_t__*,char*,int) ;
 int printf (char*,scalar_t__*) ;

void show_bfcc(u_char *buff, int len) {
    u_char *p,
            *l,
            *limit = buff + len;

    for(p = buff; p < limit; p = l + 1) {
        for(l = p; *l != DEL; l++) {
            if(!memcmp(l, END, 4)) return;
            if(!memcmp(l, "|;|", 3)) {
                if(*(l - 1) == '\t') *(l - 1) = ' ';
                memcpy(l, "\n  ", 3);
            }
        }
        *l = 0;
        printf("  %s\n", p);
    }
}
